# Civic-Grievance-Project

./: .dockerignore  .env.example  .gitignore  AI_BENCHMARK_REPORT.md  Dockerfile  Makefile  PROJECT_ARCHITECTURE.md  README.md  audit_out.txt  investigate_failures.py  manage.py  pyproject.toml  run_e2e_validation.py  run_hardening_benchmark.py  train_out.txt  verify_image_upload_db.py
.claude/: settings.local.json
api/internal/: urls.py
api/v1/: urls.py
apps/attachments/: admin.py  apps.py  models.py  permissions.py  receivers.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/attachments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_attachment_image_file.py
apps/attachments/tests/: __init__.py  test_models.py  test_permissions.py  test_serializers.py  test_services.py  test_views.py
apps/audit/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py  0002_initial.py
apps/audit/tests/: test_models.py  test_permissions.py  test_selectors.py  test_services.py  test_views.py
apps/departments/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/departments/migrations/: 0001_initial.py  0002_department_dept_categories_gin_idx.py
apps/departments/tests/: __init__.py  test_models.py  test_permissions.py  test_serializers.py  test_views.py
apps/grievances/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/grievances/migrations/: 0001_initial.py  0002_initial.py  0003_grievance_grv_submitter_submitted_idx_and_more.py  0004_add_escalated_duplicate_flagged_status.py  0005_remove_escalated_from_status_constraint.py
apps/grievances/tests/: __init__.py  test_models.py  (+5 more)
apps/integrations/: apps.py  emails.py  handlers.py  routing.py  selectors.py  services.py  signals.py  tasks.py
apps/landmarks/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/ml/: analyzer.py  apps.py  decision_engine.py  image_analyzer.py  ml_inference.py  transformer_inference.py  vision_inference.py
apps/slas/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/users/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/wards/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/workflows/: admin.py  apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
data/: README.md
data/metadata/: bbmp_report.md  dakshina_report.md  dravidian_report.md  osm_report.md  paws_report.md  qqp_report.md  wili_report.md
grievance_core/: __init__.py  asgi.py  celery_app.py  health.py  urls.py  wsgi.py
grievance_core/settings/: base.py  dev.py  production.py  staging.py  test.py
infra/: cache.py  kafka.py  otel.py
tests/: conftest.py  test_complaint_pipeline_hardening.py  test_db_integrity.py  test_dispatch_validation.py  test_escalation_automation.py  test_health.py  test_image_upload_e2e.py  test_routing_hardening.py  test_sla_breach_monitoring.py  test_vision_ai_hardening.py
tests/integrations/: test_ai_workflow_integration.py  test_email_helpers.py
tests/ml/: test_ai_benchmark.py  test_analyzer.py  test_decision_engine.py  test_image_analyzer.py  test_ml_inference.py  test_training.py  test_transformer_inference.py
tests/wards/: test_import_tvmc_wards.py  test_seed_tvmc_wards.py
(+93 files in other folders)
