[tool.poetry]
name = "grievance-core"
version = "0.1.0"
description = "Civic Grievance Intelligence Platform — transactional core service"
authors = ["Grievance Platform Team"]
readme = "README.md"
packages = [
    { include = "grievance_core" },
    { include = "apps" },
    { include = "api" },
    { include = "infra" },
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"
djangorestframework-gis = "^1.1"
django-cors-headers = "^4.3.1"
django-filter = "^24.2"
django-environ = "^0.11.2"
psycopg = { extras = ["binary", "pool"], version = "^3.1.18" }
gunicorn = "^22.0.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
celery = { extras = ["redis"], version = "^5.4.0" }
redis = "^5.0.4"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.4"
mypy = "^1.10.0"
django-stubs = { extras = ["compatible-mypy"], version = "^5.0.0" }
djangorestframework-stubs = { extras = ["compatible-mypy"], version = "^3.15.0" }
factory-boy = "^3.3.0"
faker = "^25.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff — lint and format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations", "locale"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "DJ",            # flake8-django
    "S",             # bandit (security)
    "C90",           # mccabe complexity
    "N",             # pep8-naming
    "RUF",           # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S106"]   # asserts and hardcoded passwords are fine in tests
"**/settings/*" = ["S105"]         # placeholders for module 1 skeleton
"**/migrations/*" = ["E501", "N806"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "grievance_core.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=apps",
    "--cov=grievance_core",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as requiring external services",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = ["migrations/", "locale/"]

[tool.django-stubs]
django_settings_module = "grievance_core.settings.dev"

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*", "factory.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["apps", "grievance_core"]
omit = ["*/migrations/*", "*/tests/*", "manage.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
